# AppMonitoring

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  codemagic.yaml  docker-compose.demo.yml  docker-compose.yml
admin/: Dockerfile  package-lock.json  package.json  tailwind.config.js
admin/app/: globals.css  layout.tsx  page.tsx
admin/app/alerts/: page.tsx
admin/app/analytics/: page.tsx
backend/api/: Dockerfile  pyproject.toml
backend/api/app/: main.py
backend/api/app/api/v1/: router.py
backend/api/app/api/v1/endpoints/: alerts.py  analytics.py  auth.py  devices.py  firmwares.py  telemetry.py
backend/api/app/core/: config.py  database.py  security.py
backend/api/app/models/: __init__.py  alert.py  device.py  organization.py  telemetry.py  threshold.py  user.py
backend/api/app/schemas/: auth.py  device.py
dashboard/: package-lock.json
docs/: 01-TECHNICAL_SPECIFICATION.md  02-ARCHITECTURE.md  03-BLE_PROTOCOL.md  04-DATABASE_SCHEMA.md  05-API_SPECIFICATION.md  06-PROJECT_STRUCTURE.md  07-BUSINESS_PLAN.md  08-DEVOPS_CICD.md  WiFi_QUICKSTART.md  WiFi_SETUP.md
firmware/: MEMORY_OPTIMIZATION.md  OPTIMIZATION.md  platformio.ini
firmware/src/: config.h  main.cpp
firmware/vibemon_esp32/: README.md  vibemon_esp32.ino
firmware/vibemon_esp32_advanced/: vibemon_esp32_advanced.ino  wifi_config.h
firmware/vibemon_esp32_test/: vibemon_esp32_test.ino
infrastructure/db/: init.sql
mobile/: pubspec.yaml
mobile/lib/: main.dart  predictive_analytics.dart  wifi_connection_page.dart  wifi_provider.dart
user-app/: package-lock.json  package.json
user-app/app/: layout.tsx  page.tsx
(+55 files in other folders)
