# VibeMon Backend API
# Predictive Vibration and Temperature Monitoring System

# Python version
python = "^3.11"

[tool.poetry]
name = "vibemon-api"
version = "1.0.0"
description = "VibeMon Backend API - Predictive Monitoring System"
authors = ["VibeMon Team"]

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"

# Database
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
alembic = "^1.13.1"

# Authentication
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# Validation
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0"

# HTTP Client
httpx = "^0.26.0"

# Background Tasks
celery = "^5.3.6"
redis = "^5.0.1"

# ML/Analytics
numpy = "^1.26.3"
pandas = "^2.1.4"
scikit-learn = "^1.4.0"

# Logging & Monitoring
loguru = "^0.7.2"
sentry-sdk = {extras = ["fastapi"], version = "^1.39.1"}

# Utils
python-dotenv = "^1.0.0"
orjson = "^3.9.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
black = "^24.1.0"
ruff = "^0.1.13"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
